--- a/engines/attendance/app/views/attendance/recadastre/cadastres/edit.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/cadastres/edit.html.haml
@@ -1,6 +1,6 @@
 .ui.grid
   .one.wide.mobile.column
-    %a{href: "#"}
+    %a{href: "#{recadastre_ticket_context_cadastre_path(@ticket, @context, @cadastre_mirror)}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
     .title-header Atualização de Dados
