--- a/engines/attendance/app/views/attendance/recadastre/dependents/show.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/dependents/show.html.haml
@@ -1,10 +1,10 @@
 .ui.grid
   .one.wide.mobile.column
-    %a{href: "#{recadastre_ticket_context_income_path(@ticket, @context, @cadastre_mirror)}"}
+    %a{href: "#{recadastre_ticket_context_dependents_path(@ticket, @context)}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
-    .title-header Atualização de Renda
-    .sub-title Formulário de Atualização
+    .title-header Visualização de dependente
+    .sub-title Confirmação de dependente
 
 .big-divider
 .ui.grid.container
