--- a/engines/attendance/app/views/attendance/recadastre/documents/new.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/documents/new.html.haml
@@ -1,7 +1,6 @@
 .ui.grid
   .one.wide.mobile.column
-    %a{href: "#"}
-      %i.big.arrow.left.icon
+    = link_to "<i class='big arrow left icon'></i>".html_safe, :back
   .thirteen.wide.mobile.column.text-center
     .title-header Envio de Documentação
     .sub-title Verificação de Dados Básicos
