--- a/engines/attendance/app/views/attendance/recadastre/contacts/_disable_form.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/contacts/_disable_form.html.haml
@@ -9,7 +9,8 @@
   = f.input :cep, input_html: { class: 'cep', disabled: true}
   
   .column.text-center
-    - if @context.aberto?
+    - if @context.iniciado? || @context.em_atualização?
       = link_to "Meus dados estão corretos", recadastre_ticket_context_contact_confirm_path(@ticket, @context, @cadastre_mirror), class: 'ui button green fluid', data: { disabled_with: t(:disabled_with)}
+    - if @context.iniciado?
       .divider
       = link_to "Atualizar Meus Dados", edit_recadastre_ticket_context_cadastre_path(@ticket, @context, @cadastre_mirror), class: 'ui button yellow fluid'
