--- a/engines/attendance/app/views/attendance/recadastre/incomes/_form.html.haml
+++ b/engines/attendance/app/views/attendance/recadastre/incomes/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @cadastre_mirror, url: recadastre_ticket_income_path(ticket_id: @ticket, id: @ticket.cadastre_mirror), method: :put, remote: true, validate: true do |f|
+= simple_form_for @cadastre_mirror, url: recadastre_ticket_context_income_path(@ticket, @context, @ticket.cadastre_mirror), method: :put, remote: true, validate: true do |f|
   = f.input :main_income, input_html: { class: 'coin'}
 
   = f.simple_fields_for :dependent_mirrors do |nested|
@@ -7,6 +7,4 @@
 
   .big-divider
   .column.text-center
-    = f.submit "Atualizar renda", class: 'ui button yellow fluid'
-    .divider
-    = link_to "Cancelar", ticket_path(@ticket), class: 'ui button gray fluid'
+    = f.submit "Atualizar renda", class: 'ui button yellow fluid', data: { disable_with: "Salvando informações..."}
