--- a/engines/candidate/app/views/candidate/cadastres/show.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/show.html.haml
@@ -32,6 +32,12 @@
       Meus dependentes
   .column
     .ui.segment.text-center
+      %a{href: "#{indication_cadastres_path}"}
+        %i.icon.mail.forward.big.gray
+    .text-center.bold
+      Minhas Indicações
+  .column
+    .ui.segment.text-center
       %a{href: "#{pontuation_cadastres_path}"}
         %i.icon.area.chart.big.gray
     .text-center.bold
@@ -39,7 +45,7 @@
   .column
     .ui.segment.text-center
       %a{href: "#{occurrence_cadastres_path}"}
-        %i.icon.flag.big.gray.text-center.bold
+        %i.icon.warning.sign.text.outline.big.gray
     .text-center.bold
       Ocorrências de IPTU
   .column
@@ -58,7 +64,7 @@
   .column
     .ui.segment.text-center
       %a{href: "#{address_cadastres_path}"}
-        %i.icon.home.big.gray.bold
+        %i.icon.privacy.text.outline.big.gray
     .text-center.bold
       Endereço vínculado
 
