--- a/engines/attendance/app/views/attendance/chats/_form.html.haml
+++ b/engines/attendance/app/views/attendance/chats/_form.html.haml
@@ -1,5 +1,6 @@
 = simple_form_for @chat, url: chats_path, method: :post do |f|
-  = f.association :chat_category, prompt: 'Selecione'
+  = f.label "Assunto"
+  = f.association :chat_category, label: false, prompt: 'Selecione'
   = f.simple_fields_for :chat_comments do |b|
     = b.input :content, as: :text, label: false, input_html: { placeholder: 'Escreva aqui', rows: 3}
   .big-divider
