--- a/engines/attendance/app/views/attendance/requeriments/index.html.haml
+++ b/engines/attendance/app/views/attendance/requeriments/index.html.haml
@@ -11,14 +11,20 @@
     %table.ui.celled.table
       %tbody
         - if @requeriments.present?
-          - @requeriments.each do  |requeriment|
+          - @requeriments.order(created_at: :desc).each do  |requeriment|
             %tr
               %td
                 %h4.ui.file.text.outline.header
                   %i.icon.file
+                  -if requeriment.digital_documents.present?
+                    %i.attach.icon
                   .content
                     %a{href:"#{requeriment_path(requeriment)}"}= requeriment.document_number ||= "Nenhum número gerado"
-                    .sub.header= requeriment.document_type.name rescue "Sem informação"
+                    .sub.header
+                      = requeriment.document_type.name rescue "Sem informação"
+                      %br
+                      %small
+                        = "Criado em: #{requeriment.created_at.strftime('%d/%m/%Y - %H:%M')}" rescue "Sem informação"
         - else
           %tr
             %td
@@ -28,4 +34,4 @@
 
 .ui.grid.container-fluid
   .column
-    = link_to "Enviar novo requerimento", new_requeriment_path, class: 'ui button yellow fluid'
+    = link_to "Enviar novo requerimento", new_requeriment_path, class: 'ui button yellow fluid' if @requeriments.where.not(finalized: true).count > 4
