--- a/engines/attendance/app/views/attendance/requeriments/show.html.haml
+++ b/engines/attendance/app/views/attendance/requeriments/show.html.haml
@@ -25,7 +25,7 @@
         %td Arquivos Enviados
         %td
           - if @requeriment.digital_documents.present?
-            - @requeriment.digital_documents.each_with_index do |req, index|
+            - @requeriment.digital_document_forms.each_with_index do |req, index|
               %br
               = link_to "Arquivo #{index +1}", req.doc_path_url, target: '_blank'
           - else
