--- a/engines/attendance/app/views/attendance/dependents/index.html.haml
+++ b/engines/attendance/app/views/attendance/dependents/index.html.haml
@@ -36,10 +36,10 @@
 .ui.grid.container
   .column.text-center
     - if @ticket.confirmation_required?(@action)
-      = link_to "Meus dados estão corretos", "#", class: 'ui button green fluid'
+      = link_to "Meus dados estão corretos", ticket_confirm_path(@ticket, @action), class: 'ui button green fluid'
       .divider
       = link_to "Atualizar meus dados", ticket_open_path(@ticket, @action), class: 'ui button yellow fluid'
     - elsif @ticket.open?(@action)
       .divider
-      = link_to "Atualizar meus dados", "#", class: 'ui button yellow fluid'
+      = link_to "Finalizar minha atualização", ticket_close_action_path(@ticket, @action), class: 'ui button yellow fluid'
       
